Reject broker registration without metadata.version and fix tests